[tool.poetry]
name = "bet-hack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
ipykernel = "^6.7.0"
pandas = "^1.4.0"
ratelimit = "^2.2.1"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
